# multilingual-telegram-bot

./: .env  .env.example  .replit  .replit.run.yml  Bot_Deployment_Guide.md  HOW_TO_USE_THIS_PACKAGE.txt  README.md  bot.pid  bot_debug_output.txt  bot_runner.py  check_bot.sh  debug_bot.py  debug_telegram_bot.py  direct_telegram_bot.py  helpers.py  main.py  models.py  package_for_deployment.py  persistent_bot.py  pyproject.toml  render.yaml  requirements.txt  restart_bot.sh  run_bot.py  run_bot_persistent.py  run_bot_standalone.py  run_direct_bot.sh  run_persistent_bot.sh  run_telegram_bot.py  run_telegram_bot.sh  run_telegram_bot_workflow.sh  simple_debug_bot.py  simple_test_bot.py  start.sh  start_bot.py  start_bot.sh  start_telegram_bot.sh  telegram_bot.py  telegram_bot_runner.py  telegram_bot_workflow.py  (+3 more)
admin/: __init__.py  auth.py  config.py  database.py  main.py  models.py
admin/routers/: __init__.py  bookings.py  schedule.py  staff.py
admin/templates/: base.html  booking_detail.html  bookings.html  dashboard.html  login.html  schedule.html  staff.html  (+1 more)
attached_assets/: Pasted-Multilingual-Telegram-Bot-with-Booking-Payments-Zoom-Bitrix24-Admin-Panel-You-are-an-expert-ful-1745018006532.txt  Pasted-Multilingual-Telegram-Bot-with-Booking-Payments-Zoom-Bitrix24-Admin-Panel-You-are-an-expert-ful-1745018359850.txt
bot/: __init__.py  config.py  database.py  main.py
deployment_package/: persistent_bot.py  requirements.txt  run_bot.sh  setup.sh  ultra_simple_bot.py
instance/: admin.db
templates/: base.html  booking_detail.html  bookings.html  login.html
(+33 files in other folders)
